# sqz-mac

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FORK.md  README.md  install.sh  pyproject.toml
.github/workflows/: benchmarks.yml  docs.yml  publish.yml  release.yml
docs/: benchmark-vs-rtk.md  whitepaper.md
docs/arxiv/: references.bib  sqz-paper.tex
docs/integrations/: README.md
npm/: package.json
sqz/: Cargo.toml
sqz-mcp/: Cargo.toml
sqz-mcp/src/: lib.rs  main.rs
sqz-wasm/: Cargo.toml
sqz/src/: cli_proxy.rs  main.rs  shell_hook.rs  tests.rs  vizit.rs
sqz/tests/: integration.rs
sqz_engine/: Cargo.toml
sqz_engine/examples/: basic_compress.rs  cache_dedup.rs  json_compress.rs  preset_config.rs
sqz_engine/src/: adaptive_tree.rs  advanced_search.rs  ansi_strip.rs  api_proxy.rs  ast_delta.rs  ast_parser.rs  benchmarks.rs  bpe_compressor.rs  budget_tracker.rs  cache_manager.rs  cascade_compressor.rs  claude_md_integration.rs  cmd_formatter_bench.rs  codex_integration.rs  compression_quality.rs  confidence_router.rs  context_evictor.rs  correction_log.rs  cost_calculator.rs  crp_engine.rs  ctx_format.rs  dashboard.rs  delta_encoder.rs  dependency_mapper.rs  dict_compressor.rs  engine.rs  entropy_analyzer.rs  entropy_truncator.rs  file_reader.rs  hook_manager.rs  image_compressor.rs  json_projection.rs  kv_cache_optimizer.rs  lib.rs  litm_positioner.rs  mdl_selector.rs  minhash_lsh.rs  model_router.rs  ngram_abbreviator.rs  opencode_plugin.rs  (+27 more)
vscode-extension/: package.json
vscode-extension/src/: extension.ts  sqzBridge.ts  (+1 more)
(+25 files in other folders)
